[EFL] REGRESSION(r173394): MiniBrowser stucked in an infinite loop if NETWORK_CACHE is disabled https://bugs.webkit.org/show_bug.cgi?id=137692

Reviewed by Darin Adler.

Source/WebKit2:

* WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::maximumBufferingTime): Disable caching if NETWORK_CACHE is disabled.

LayoutTests:

* platform/efl/TestExpectations: Unskip now passing tests.


Canonical link: https://commits.webkit.org/170139@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193752 268f45cc-cd09-0410-ab3c-d52691b4dbfc