Source/WebKit2/WebProcess/Network/WebLoaderStrategy.cpp
@@ -86,6 +86,10 @@ RefPtr<NetscapePlugInStreamLoader> WebLoaderStrategy::schedulePluginStreamLoad(F
 
 static std::chrono::milliseconds maximumBufferingTime(CachedResource* resource)
 {
+#if !ENABLE(NETWORK_CACHE)
+    return 0_ms;
+#endif
+
     if (!resource)
         return 0_ms;
 
